--- a/PassIn.Api/appsettings.json
+++ b/PassIn.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AppDbConnectionString": "Server=tcp:rcunha.database.windows.net,1433;Initial Catalog=cunha_database;Persist Security Info=False;User ID=rcunha_db;Password=Rgf980711;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
+
 }
