--- a/PassIn.Api/appsettings.Development.json
+++ b/PassIn.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AppDbConnectionString": "postgres://rcunha_db:TGJjUP5mTPRRHXGHccRMPlxingF0SbWN@dpg-cp38umol6cac73f1uee0-a.oregon-postgres.render.com/rcunha_db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
