--- a/PassIn.Api/appsettings.Development.json
+++ b/PassIn.Api/appsettings.Development.json
@@ -1,7 +1,12 @@
 {
+
   "ConnectionStrings": {
-    "AppDbConnectionString": "postgres://rcunha_db:TGJjUP5mTPRRHXGHccRMPlxingF0SbWN@dpg-cp38umol6cac73f1uee0-a.oregon-postgres.render.com/rcunha_db"
+    "DefaultConnection": "Server=dpg-cp38umol6cac73f1uee0-a.oregon-postgres.render.com;Database=rcunha_db;User Id=rcunha_db;Password=TGJjUP5mTPRRHXGHccRMPlxingF0SbWN;"
   },
+
+  //"ConnectionStrings": {
+  //  "AppDbConnectionString": "postgres://rcunha_db:TGJjUP5mTPRRHXGHccRMPlxingF0SbWN@dpg-cp38umol6cac73f1uee0-a.oregon-postgres.render.com/rcunha_db"
+  //},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
