--- a/PassIn.Api/appsettings.json
+++ b/PassIn.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDbConnectionString": "postgres://rcunha_db:TGJjUP5mTPRRHXGHccRMPlxingF0SbWN@dpg-cp38umol6cac73f1uee0-a.oregon-postgres.render.com/rcunha_db"
+    "AppDbConnectionString": "Server=dpg-cp38umol6cac73f1uee0-a.oregon-postgres.render.com;Database=rcunha_db;UserId=rcunha_db;Password=TGJjUP5mTPRRHXGHccRMPlxingF0SbWN;"
   }
 
 }
