--- a/PassIn.Api/appsettings.json
+++ b/PassIn.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDbConnectionString": "Server=dpg-cp38umol6cac73f1uee0-a.oregon-postgres.render.com;Database=rcunha_db;UserId=rcunha_db;Password=TGJjUP5mTPRRHXGHccRMPlxingF0SbWN;"
+    "AppDbConnectionString": "User ID=rcunha_db;Password=TGJjUP5mTPRRHXGHccRMPlxingF0SbWN;Host=dpg-cp38umol6cac73f1uee0-a.oregon-postgres.render.com;Port=5432;Database=rcunha_db;"
   }
-
 }
+ 
