--- a/PassIn.Application/CarGlass.Application.csproj
+++ b/PassIn.Application/CarGlass.Application.csproj
@@ -26,9 +26,9 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\PassIn.Communication\PassIn.Communication.csproj" />
-    <ProjectReference Include="..\PassIn.Exceptions\PassIn.Exceptions.csproj" />
-    <ProjectReference Include="..\PassIn.Infrastructure\PassIn.Infrastructure.csproj" />
+    <ProjectReference Include="..\PassIn.Communication\CarGlass.Communication.csproj" />
+    <ProjectReference Include="..\PassIn.Exceptions\CarGlass.Exceptions.csproj" />
+    <ProjectReference Include="..\PassIn.Infrastructure\CarGlass.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
